metatomic-core/include/metatomic.h


typedef struct mta_opaque_string_t mta_opaque_string_t;
typedef struct mta_system_t mta_system_t;
typedef enum mta_status_t {
  MTA_SUCCESS = 0,
  MTA_INVALID_PARAMETER_ERROR = 1,
  MTA_IO_ERROR = 2,
  MTA_MEMORY_ERROR = 3,
  MTA_SERIALIZATION_ERROR = 4,
  MTA_DLPACK_ERROR = 5,
  MTA_METATENSOR_ERROR = 6,
  MTA_UNSUPPORTED_MODEL_ERROR = 7,
  MTA_MODEL_ERROR = 8,
  MTA_INTERNAL_ERROR = 255,
} mta_status_t;
typedef enum mta_system_data_kind {
  MTA_SYSTEM_DATA_TYPES = 0,
  MTA_SYSTEM_DATA_POSITIONS = 1,
  MTA_SYSTEM_DATA_CELL = 2,
  MTA_SYSTEM_DATA_PBC = 3,
} mta_system_data_kind;
typedef mta_opaque_string_t *mta_string_t;
typedef struct mta_model_t {
  void *data;
  enum mta_status_t (*unload)(void *model_data);
  enum mta_status_t (*capabilities)(const void *model_data, mta_string_t *capabilities_json);
  enum mta_status_t (*metadata)(const void *model_data, mta_string_t *metadata_json);
  enum mta_status_t (*requested_pair_lists)(const void *model_data, mta_string_t *pair_options_json);
  enum mta_status_t (*requested_inputs)(const void *model_data, mta_string_t *inputs_json);
  enum mta_status_t (*execute_inner)(void *model_data,
                                     const mta_system_t *const *systems,
                                     uintptr_t systems_count,
                                     const mts_labels_t *selected_atoms,
                                     const char *requested_outputs_json,
                                     mts_tensormap_t **outputs,
                                     uintptr_t outputs_count);
} mta_model_t;
typedef struct mta_plugin_t {
  int32_t abi_version;
  const char *name;
  enum mta_status_t (*load_model)(const char *load_from,
                                  const char *options_json,
                                  struct mta_model_t *model);
} mta_plugin_t;
enum mta_status_t mta_last_error(const char **message, const char **origin, void **data);
enum mta_status_t mta_set_last_error(const char *message,
                                     const char *origin,
                                     void *data,
                                     void (*data_deleter)(void*));
const char *mta_version(void);
mta_string_t mta_string_create(const char *string);
void mta_string_free(mta_string_t string);
const char *mta_string_view(mta_string_t string);
enum mta_status_t mta_unit_conversion_factor(const char *from_unit,
                                             const char *to_unit,
                                             double *conversion);
enum mta_status_t mta_system_create(const char *length_unit,
                                    DLManagedTensorVersioned *types,
                                    DLManagedTensorVersioned *positions,
                                    DLManagedTensorVersioned *cell,
                                    DLManagedTensorVersioned *pbc,
                                    mta_system_t **system);
enum mta_status_t mta_system_free(mta_system_t *system);
enum mta_status_t mta_system_size(const mta_system_t *system, uintptr_t *size);
enum mta_status_t mta_system_get_data(const mta_system_t *system,
                                      enum mta_system_data_kind request,
                                      DLManagedTensorVersioned **data);
enum mta_status_t mta_system_get_length_unit(const mta_system_t *system, mta_string_t *length_unit);
enum mta_status_t mta_system_add_pairs(mta_system_t *system,
                                       const char *options,
                                       mts_block_t *pairs);
enum mta_status_t mta_system_get_pairs(const mta_system_t *system,
                                       const char *options,
                                       const mts_block_t **pairs);
enum mta_status_t mta_system_known_pairs(const mta_system_t *system, mta_string_t *pairs_options);
enum mta_status_t mta_system_add_custom_data(mta_system_t *system,
                                             const char *name,
                                             mts_tensormap_t *data);
enum mta_status_t mta_system_get_custom_data(const mta_system_t *system,
                                             const char *name,
                                             const mts_tensormap_t **data);
enum mta_status_t mta_system_known_custom_data(const mta_system_t *system, mta_string_t *names);
enum mta_status_t mta_execute_model(struct mta_model_t model,
                                    const mta_system_t *const *systems,
                                    uintptr_t systems_count,
                                    const mts_labels_t *selected_atoms,
                                    const char *requested_outputs_json,
                                    bool check_consistency,
                                    mts_tensormap_t **outputs,
                                    uintptr_t outputs_count);
enum mta_status_t mta_format_metadata(const char *metadata, mta_string_t *printed);
enum mta_status_t mta_register_plugin(struct mta_plugin_t plugin);
enum mta_status_t mta_load_plugin(const char *path);
enum mta_status_t mta_load_model(const char *load_from,
                                 const char *options_json,
                                 const char *plugin_name,
                                 struct mta_model_t *model);
enum mta_status_t mta_save(const char *path, const mta_system_t *system);
enum mta_status_t mta_save_buffer(uint8_t **buffer,
                                  uintptr_t *buffer_count,
                                  void *realloc_user_data,
                                  mts_realloc_buffer_t realloc,
                                  const mta_system_t *system);
enum mta_status_t mta_load(const char *path,
                           mts_create_array_callback_t create_array,
                           mta_system_t **system);
enum mta_status_t mta_load_buffer(const uint8_t *buffer,
                                  uintptr_t buffer_size,
                                  mts_create_array_callback_t create_array,
                                  mta_system_t **system);