python/metatomic_core/src/metatomic/_c_api.py

# fmt: off
# flake8: noqa
"""
This file declares the C-API corresponding to metatomic.h, in a way compatible
with the ctypes Python module.

This file is automatically generated by `scripts/update-declarations.py`,
do not edit it manually!
"""

import ctypes
import platform
from ctypes import CFUNCTYPE, POINTER

from ctypes_dlpack import DLDataType, DLDevice, DLManagedTensorVersioned, DLPackVersion
from metatensor._c_api import (
    mts_labels_t,
    mts_block_t,
    mts_tensormap_t,
    mts_realloc_buffer_t,
    mts_create_array_callback_t,
)


class _EnumType(type(ctypes.c_int32)):
    def __new__(metacls, name, bases, namespace):
        if "_members_" not in namespace:
            members = {}
            for key, value in namespace.items():
                if not key.startswith("_"):
                    members[key] = value
            namespace["_members_"] = members
        else:
            members = namespace["_members_"]

        namespace["_reverse_map_"] = {v: k for k, v in members.items()}
        return type(ctypes.c_int32).__new__(metacls, name, bases, namespace)

    def __repr__(self):
        return f"<Enum {self.__name__}>"


class _Enum(ctypes.c_int32, metaclass=_EnumType):
    _members_ = {}

    def __repr__(self):
        value_name = self._reverse_map_.get(self.value, str(self.value))
        return f"{self.__class__.__name__}.{value_name}"

    def __eq__(self, other):
        if isinstance(other, int):
            return self.value == other
        if type(self) is type(other):
            return self.value == other.value
        return NotImplemented

    def __hash__(self):
        return hash(self.value)


arch = platform.architecture()[0]
if arch == "32bit":
    c_uintptr_t = ctypes.c_uint32
elif arch == "64bit":
    c_uintptr_t = ctypes.c_uint64



class mta_status_t(_Enum):
    MTA_SUCCESS = 0
    MTA_INVALID_PARAMETER_ERROR = 1
    MTA_IO_ERROR = 2
    MTA_SERIALIZATION_ERROR = 3
    MTA_DLPACK_ERROR = 4
    MTA_METATENSOR_ERROR = 5
    MTA_MODEL_NOT_SUPPORTED_ERROR = 6
    MTA_INTERNAL_ERROR = 255


class mta_system_data_kind(_Enum):
    MTA_SYSTEM_DATA_TYPES = 0
    MTA_SYSTEM_DATA_POSITIONS = 1
    MTA_SYSTEM_DATA_CELL = 2
    MTA_SYSTEM_DATA_PBC = 3


class mta_opaque_string_t(ctypes.Structure):
    pass


class mta_system_t(ctypes.Structure):
    pass


class mta_model_t(ctypes.Structure):
    pass


class mta_plugin_t(ctypes.Structure):
    pass


mta_string_t = POINTER(mta_opaque_string_t)


mta_model_t._fields_ = [
    ("data", ctypes.c_void_p),
    ("unload", CFUNCTYPE(mta_status_t, ctypes.c_void_p)),
    ("capabilities", CFUNCTYPE(mta_status_t, ctypes.c_void_p, POINTER(mta_string_t))),
    ("metadata", CFUNCTYPE(mta_status_t, ctypes.c_void_p, POINTER(mta_string_t))),
    ("requested_pair_lists", CFUNCTYPE(mta_status_t, ctypes.c_void_p, POINTER(mta_string_t))),
    ("requested_inputs", CFUNCTYPE(mta_status_t, ctypes.c_void_p, POINTER(mta_string_t))),
    ("execute_inner", CFUNCTYPE(mta_status_t, ctypes.c_void_p, POINTER(POINTER(mta_system_t)), c_uintptr_t, POINTER(mts_labels_t), ctypes.c_char_p, POINTER(POINTER(mts_tensormap_t)), c_uintptr_t)),
]

mta_plugin_t._fields_ = [
    ("abi_version", ctypes.c_int32),
    ("name", ctypes.c_char_p),
    ("load_model", CFUNCTYPE(mta_status_t, ctypes.c_char_p, ctypes.c_char_p, POINTER(mta_model_t))),
]


def setup_functions(lib):
    from ._status import check_status

    lib.mta_last_error.argtypes = [
        POINTER(ctypes.c_char_p),
        POINTER(ctypes.c_char_p),
        POINTER(POINTER(None)),
    ]
    lib.mta_last_error.restype = mta_status_t

    lib.mta_set_last_error.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_void_p,
        CFUNCTYPE(None, ctypes.c_void_p),
    ]
    lib.mta_set_last_error.restype = check_status

    lib.mta_version.argtypes = [
    ]
    lib.mta_version.restype = ctypes.c_char_p

    lib.mta_string_create.argtypes = [
        ctypes.c_char_p,
    ]
    lib.mta_string_create.restype = mta_string_t

    lib.mta_string_free.argtypes = [
        mta_string_t,
    ]
    lib.mta_string_free.restype = None

    lib.mta_string_view.argtypes = [
        mta_string_t,
    ]
    lib.mta_string_view.restype = ctypes.c_char_p

    lib.mta_unit_conversion_factor.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        POINTER(ctypes.c_double),
    ]
    lib.mta_unit_conversion_factor.restype = check_status

    lib.mta_system_create.argtypes = [
        ctypes.c_char_p,
        POINTER(DLManagedTensorVersioned),
        POINTER(DLManagedTensorVersioned),
        POINTER(DLManagedTensorVersioned),
        POINTER(DLManagedTensorVersioned),
        POINTER(POINTER(mta_system_t)),
    ]
    lib.mta_system_create.restype = check_status

    lib.mta_system_free.argtypes = [
        POINTER(mta_system_t),
    ]
    lib.mta_system_free.restype = check_status

    lib.mta_system_size.argtypes = [
        POINTER(mta_system_t),
        POINTER(c_uintptr_t),
    ]
    lib.mta_system_size.restype = check_status

    lib.mta_system_get_data.argtypes = [
        POINTER(mta_system_t),
        mta_system_data_kind,
        POINTER(POINTER(DLManagedTensorVersioned)),
    ]
    lib.mta_system_get_data.restype = check_status

    lib.mta_system_get_length_unit.argtypes = [
        POINTER(mta_system_t),
        POINTER(mta_string_t),
    ]
    lib.mta_system_get_length_unit.restype = check_status

    lib.mta_system_add_pairs.argtypes = [
        POINTER(mta_system_t),
        ctypes.c_char_p,
        POINTER(mts_block_t),
    ]
    lib.mta_system_add_pairs.restype = check_status

    lib.mta_system_get_pairs.argtypes = [
        POINTER(mta_system_t),
        ctypes.c_char_p,
        POINTER(POINTER(mts_block_t)),
    ]
    lib.mta_system_get_pairs.restype = check_status

    lib.mta_system_known_pairs.argtypes = [
        POINTER(mta_system_t),
        POINTER(mta_string_t),
    ]
    lib.mta_system_known_pairs.restype = check_status

    lib.mta_system_add_custom_data.argtypes = [
        POINTER(mta_system_t),
        ctypes.c_char_p,
        POINTER(mts_tensormap_t),
    ]
    lib.mta_system_add_custom_data.restype = check_status

    lib.mta_system_get_custom_data.argtypes = [
        POINTER(mta_system_t),
        ctypes.c_char_p,
        POINTER(POINTER(mts_tensormap_t)),
    ]
    lib.mta_system_get_custom_data.restype = check_status

    lib.mta_system_known_custom_data.argtypes = [
        POINTER(mta_system_t),
        POINTER(mta_string_t),
    ]
    lib.mta_system_known_custom_data.restype = check_status

    lib.mta_execute_model.argtypes = [
        mta_model_t,
        POINTER(POINTER(mta_system_t)),
        c_uintptr_t,
        POINTER(mts_labels_t),
        ctypes.c_char_p,
        ctypes.c_bool,
        POINTER(POINTER(mts_tensormap_t)),
        c_uintptr_t,
    ]
    lib.mta_execute_model.restype = check_status

    lib.mta_format_metadata.argtypes = [
        ctypes.c_char_p,
        POINTER(mta_string_t),
    ]
    lib.mta_format_metadata.restype = check_status

    lib.mta_register_plugin.argtypes = [
        mta_plugin_t,
    ]
    lib.mta_register_plugin.restype = check_status

    lib.mta_load_plugin.argtypes = [
        ctypes.c_char_p,
    ]
    lib.mta_load_plugin.restype = check_status

    lib.mta_load_model.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_char_p,
        POINTER(mta_model_t),
    ]
    lib.mta_load_model.restype = check_status

    lib.mta_save.argtypes = [
        ctypes.c_char_p,
        POINTER(mta_system_t),
    ]
    lib.mta_save.restype = check_status

    lib.mta_save_buffer.argtypes = [
        POINTER(ctypes.c_char_p),
        POINTER(c_uintptr_t),
        ctypes.c_void_p,
        mts_realloc_buffer_t,
        POINTER(mta_system_t),
    ]
    lib.mta_save_buffer.restype = check_status

    lib.mta_load.argtypes = [
        ctypes.c_char_p,
        mts_create_array_callback_t,
        POINTER(POINTER(mta_system_t)),
    ]
    lib.mta_load.restype = check_status

    lib.mta_load_buffer.argtypes = [
        ctypes.c_char_p,
        c_uintptr_t,
        mts_create_array_callback_t,
        POINTER(POINTER(mta_system_t)),
    ]
    lib.mta_load_buffer.restype = check_status
